--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body class="page">
     <div class="page__content">
       <header class="page__section header">
-        <img src="./images/Vector.svg" alt="logo image" />
+        <img class="header__image" src="./images/Vector.svg" alt="logo image" />
+        <div class="header__line"></div>
       </header>
       <main class="content">
         <section class="profile page__section">
