--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Around the U.S</title>
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="stylesheet" href="./vendor/fonts.css" />
   </head>
@@ -97,6 +97,7 @@
             </li>
           </ul>
         </section>
+        <footer class="footer page__section"><p class="footer__text">&#169 2024 Around The U.S.</p></footer>
       </main>
     </div>
   </body>
