--- a/index.html
+++ b/index.html
@@ -5,30 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Around the U.S</title>
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="stylesheet" href="./vendor/fonts.css" />
   </head>
   <body class="page">
     <div class="page__content">
       <header class="page__section header">
         <img class="header__image" src="./images/Vector.svg" alt="logo image" />
-        <div class="header__line"></div>
       </header>
       <main class="content">
         <section class="profile page__section">
           <img
             class="profile__image"
             src="./images/jacques-cousteau.jpg"
-            alt=""
+            alt="jacques cousteau photo"
           />
           <div class="profile__info">
             <h1 class="profile__title">Jaques Cousteau</h1>
-            <button class="profile__edit-button"></button>
+            <button
+              class="profile__edit-button"
+              aria-label="profile__edit-button"
+              type="button"
+            ></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button"></button>
+          <button
+            class="profile__add-button"
+            aria-label="profile__add-button"
+            type="button"
+          ></button>
         </section>
         <section class="cards page__section">
-          <ul class="card__list">
+          <ul class="cards__list">
             <li class="card">
               <img
                 class="card__image"
@@ -36,8 +42,12 @@
                 alt="lake louise image"
               />
               <div class="card__description">
-                <h2>Yosemite Valley</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Yosemite Valley</h2>
+                <button
+                  class="card__like-button"
+                  aria-label="card__like-button"
+                  type="button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -47,8 +57,12 @@
                 alt="lake louise image"
               />
               <div class="card__description">
-                <h2>Lake Louise</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Lake Louise</h2>
+                <button
+                  class="card__like-button"
+                  aria-label="card__like-button"
+                  type="button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -58,8 +72,12 @@
                 alt="lake louise image"
               />
               <div class="card__description">
-                <h2>Bald Mountains</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Bald Mountains</h2>
+                <button
+                  class="card__like-button"
+                  aria-label="card__like-button"
+                  type="button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -69,8 +87,12 @@
                 alt="lake louise image"
               />
               <div class="card__description">
-                <h2>Latemar</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Latemar</h2>
+                <button
+                  class="card__like-button"
+                  aria-label="card__like-button"
+                  type="button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -80,8 +102,12 @@
                 alt="lake louise image"
               />
               <div class="card__description">
-                <h2>Vanoise National Park</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Vanoise National Park</h2>
+                <button
+                  class="card__like-button"
+                  aria-label="card__like-button"
+                  type="button"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -91,14 +117,20 @@
                 alt="lake louise image"
               />
               <div class="card__description">
-                <h2>Lago de Braies</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Lago de Braies</h2>
+                <button
+                  class="card__like-button"
+                  aria-label="card__like-button"
+                  type="button"
+                ></button>
               </div>
             </li>
           </ul>
         </section>
-        <footer class="footer page__section"><p class="footer__text">&#169 2024 Around The U.S.</p></footer>
       </main>
+      <footer class="footer page__section">
+        <p class="footer__text">&#169; 2024 Around The U.S.</p>
+      </footer>
     </div>
   </body>
 </html>
