--- a/index.html
+++ b/index.html
@@ -132,5 +132,6 @@
         <p class="footer__text">&#169; 2024 Around The U.S.</p>
       </footer>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
