--- a/index.html
+++ b/index.html
@@ -132,6 +132,27 @@
         <p class="footer__text">&#169; 2024 Around The U.S.</p>
       </footer>
     </div>
+    <div class="modal">
+      <div class="modal__container">
+        <button class="modal__close-button"></button>
+        <p class="modal__heading">Edit profile</p>
+        <form class="modal__form">
+          <input
+            class="modal__form-input"
+            type="text"
+            name="title"
+            placeholder="Jacques Cousteau"
+          />
+          <input
+            class="modal__form-input"
+            type="text"
+            name="description"
+            placeholder="Explorer"
+          />
+          <button class="modal__button">save</button>
+        </form>
+      </div>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
