--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <h1 class="profile__title">Jaques Cousteau</h1>
             <button
               class="profile__edit-button"
+              id="profile-edit-button"
               aria-label="profile__edit-button"
               type="button"
             ></button>
@@ -132,9 +133,9 @@
         <p class="footer__text">&#169; 2024 Around The U.S.</p>
       </footer>
     </div>
-    <div class="modal">
+    <div class="modal modal_opened" id="profile-edit-modal">
       <div class="modal__container">
-        <button class="modal__close-button"></button>
+        <button class="modal__close-button" id="modal-close-button"></button>
         <p class="modal__heading">Edit profile</p>
         <form class="modal__form">
           <input
