--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     </div>
     <!--image preview modal-->
     <div class="modal" id="image-preview-modal">
-      <div class="modal__container_image_preview">
+      <div class="modal__container_preview">
         <button class="modal__close-button"></button>
         <img class="modal__image" alt="" />
         <h3 class="modal__image-description"></h3>
       </div>
     </div>
 
-    <template id="card-template" class="card__template">
+    <template id="card-template" class="template">
       <li class="card">
         <button class="trash-button"></button>
         <img class="card__image" src="" alt="" id="card" />
