--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
         <p class="modal__heading">Edit profile</p>
         <form class="modal__form" name="profile-form">
           <input
+            required
             class="modal__form-input"
             id="profile-title-input"
             type="text"
             name="title"
+            minlength="2"
+            maxlength="40"
             placeholder="Jacques Cousteau"
           />
           <input
@@ -114,5 +117,6 @@
       </li>
     </template>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
   </body>
 </html>
