--- a/index.html
+++ b/index.html
@@ -47,25 +47,36 @@
       <div class="modal__container">
         <button class="modal__close-button" id="edit-close-button"></button>
         <p class="modal__heading">Edit profile</p>
-        <form class="modal__form" name="profile-form">
+        <form class="modal__form popup__form" name="profile-form">
           <input
-            required
-            class="modal__form-input"
+            class="modal__form-input popup__input"
             id="profile-title-input"
             type="text"
             name="title"
+            required
             minlength="2"
             maxlength="40"
             placeholder="Jacques Cousteau"
           />
+          <span class="popup__error" id="profile-title-input-error"></span>
           <input
-            class="modal__form-input"
+            class="modal__form-input popup__input"
             id="profile-description-input"
             type="text"
             name="description"
             placeholder="Explorer"
+            required
+            minlength="2"
+            maxlength="200"
           />
-          <button class="modal__button">save</button>
+          <span
+            class="popup__error"
+            id="profile-description-input-error"
+          ></span>
+
+          <button class="modal__button popup__button_disabled" type="submit">
+            save
+          </button>
         </form>
       </div>
     </div>
@@ -74,22 +85,32 @@
       <div class="modal__container">
         <button class="modal__close-button"></button>
         <p class="modal__heading">New Place</p>
-        <form class="modal__form" name="add-form" id="add-card-form">
+        <form
+          class="modal__form popup__form"
+          name="add-form"
+          id="add-card-form"
+        >
           <input
-            class="modal__form-input"
+            class="modal__form-input popup__input"
             id="modal-add-input-title"
             type="text"
             name="title"
             placeholder="Title"
+            minlength="1"
+            maxlength="30"
+            required
           />
+          <span class="popup__error" id="modal-add-input-title-error"></span>
           <input
-            class="modal__form-input"
+            class="modal__form-input popup__input"
             id="modal-add-input-url"
-            type="text"
+            type="url"
+            required
             name="url"
             placeholder="Image URL"
           />
-          <button class="modal__add-button">Create</button>
+          <span class="popup__error" id="modal-add-input-url-error"></span>
+          <button class="modal__add-button" type="submit">Create</button>
         </form>
       </div>
     </div>
