--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             maxlength="40"
             placeholder="Jacques Cousteau"
           />
-          <span class="popup__error" id="profile-title-input-error"></span>
+          <span class="modal__error" id="profile-title-input-error"></span>
           <input
             class="modal__form-input popup__input"
             id="profile-description-input"
@@ -70,11 +70,11 @@
             maxlength="200"
           />
           <span
-            class="popup__error"
+            class="modal__error"
             id="profile-description-input-error"
           ></span>
 
-          <button class="modal__button popup__button_disabled" type="submit">
+          <button class="modal__button modal__button_disabled" type="submit">
             save
           </button>
         </form>
@@ -100,7 +100,7 @@
             maxlength="30"
             required
           />
-          <span class="popup__error" id="modal-add-input-title-error"></span>
+          <span class="modal__error" id="modal-add-input-title-error"></span>
           <input
             class="modal__form-input popup__input"
             id="modal-add-input-url"
@@ -109,8 +109,10 @@
             name="url"
             placeholder="Image URL"
           />
-          <span class="popup__error" id="modal-add-input-url-error"></span>
-          <button class="modal__add-button" type="submit">Create</button>
+          <span class="modal__error" id="modal-add-input-url-error"></span>
+          <button class="modal__button modal__button_disabled" type="submit">
+            Create
+          </button>
         </form>
       </div>
     </div>
